--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-jupyter==1.0.0
-matplotlib==3.1.1
-numpy==1.17.0
-Pillow==6.2.0
-sklearn==0.0
-snorkel==0.9.3
-networkx>=2.2,<2.4
+jupyter==1.1.1
+matplotlib==3.10.0
+numpy==2.1.3
+pillow==11.1.0
+scikit-learn==1.6.1
+snorkel==0.10.0
+networkx>=2.2,<3.4.3
 
